# Engine

./: CMakeLists.txt  COPYRIGHT  README.md  TODO.md
Engine/: CMakeLists.txt
Engine/Private/Zyphryon.Audio/Driver/: FAudioDriver.cpp  FAudioDriver.hpp
Engine/Private/Zyphryon.Content/Material/: Loader.cpp  Loader.hpp
Engine/Private/Zyphryon.Content/Pipeline/: Loader.cpp  Loader.hpp
Engine/Public/Zyphryon.Audio/: Codec.cpp  Codec.hpp  Common.cpp  Common.hpp  Decoder.cpp  Decoder.hpp  Driver.hpp  Emitter.cpp  Emitter.hpp  Listener.cpp  Listener.hpp  Pose.cpp  Pose.hpp  Service.cpp  Service.hpp  Sound.cpp  Sound.hpp  Track.cpp  Track.hpp
Engine/Public/Zyphryon.Base/: Base.cpp  Base.hpp  Bit.cpp  Bit.hpp  Collection.cpp  Collection.hpp  Compiler.cpp  Compiler.hpp  Concept.hpp  Concurrency.cpp  Concurrency.hpp  Delegate.cpp  Delegate.hpp  Enum.cpp  Enum.hpp  Hash.cpp  Hash.hpp  Log.cpp  Log.hpp  Primitive.cpp  Primitive.hpp  Profiler.cpp  Profiler.hpp  Random.cpp  Random.hpp  Scalar.cpp  Scalar.hpp  Text.cpp  Text.hpp  Time.cpp  Time.hpp  Trait.cpp  Trait.hpp  Utility.cpp  Utility.hpp  Variant.cpp  Variant.hpp
Engine/Public/Zyphryon.Base/Container/: Blob.hpp  Catalog.cpp  Catalog.hpp  Pool.hpp  Slot.cpp  Slot.hpp  Symbol.cpp  Symbol.hpp  Variant.hpp
Engine/Public/Zyphryon.Base/Domain/: Dependency.cpp  Dependency.hpp  (+7 more)
Engine/Public/Zyphryon.Collision/: Collision.cpp  Collision.hpp  Manifold.cpp  Manifold.hpp  Shape.cpp  Shape.hpp
Engine/Public/Zyphryon.Content/: Cache.cpp  Cache.hpp  Loader.cpp  Loader.hpp  Mount.cpp  Mount.hpp  Proxy.cpp  Proxy.hpp  Resource.cpp  Resource.hpp  Scope.cpp  Scope.hpp  Service.cpp  Service.hpp  Uri.cpp  Uri.hpp
Engine/Public/Zyphryon.Engine/: Device.cpp  Device.hpp  Kernel.cpp  Kernel.hpp  Properties.cpp  Properties.hpp
Engine/Public/Zyphryon.Graphic/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Common.cpp  Common.hpp  Driver.cpp  Driver.hpp  Encoder.cpp  Encoder.hpp  Font.cpp  Font.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Service.cpp  Service.hpp  Texture.cpp  Texture.hpp
Engine/Public/Zyphryon.Input/: Common.cpp  Common.hpp  Keyboard.cpp  Keyboard.hpp  Listener.cpp  Listener.hpp  Mouse.cpp  Mouse.hpp  Poller.cpp  Poller.hpp  Service.cpp  Service.hpp
Engine/Public/Zyphryon.Math/: Angle.hpp  Color.hpp  Easing.cpp  Easing.hpp  Matrix3x2.cpp  Matrix3x2.hpp  Matrix4x4.cpp  Matrix4x4.hpp  Pivot.cpp  Pivot.hpp  Quaternion.cpp  Quaternion.hpp  Random.cpp  Random.hpp  Scalar.hpp  Transform.cpp  Transform.hpp  Transform2D.hpp  Transform3D.cpp  Transform3D.hpp  Tween.cpp  Tween.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Engine/Public/Zyphryon.Physics/: Intersect.cpp  Intersect.hpp  Manifold.hpp
Engine/Public/Zyphryon.Scene/: Builder.cpp  Builder.hpp  Codec.hpp  Common.hpp  Component.cpp  Component.hpp  Concept.hpp  Entity.cpp  Entity.hpp  Factory.cpp  Factory.hpp  Pin.cpp  Pin.hpp  Pipeline.cpp  Pipeline.hpp  Query.cpp  Query.hpp  Service.cpp  Service.hpp  System.cpp  System.hpp  Tag.cpp  Tag.hpp  Timer.cpp  Timer.hpp  World.cpp  World.hpp
Engine/Resources/Font/: Roboto.fnt
Engine/Resources/Material/: Default.material
Engine/Resources/Pipeline/: MSDF.effect  MSDF.shader  Primitive.effect  Sprite.effect  UI.effect  UI.shader
Engine/Source/Zyphryon.Audio/: Common.hpp  Decoder.hpp  Driver.cpp  Driver.hpp  Emitter.cpp  Emitter.hpp  Mixer.cpp  Mixer.hpp  Pose.hpp  Resampler.cpp  Resampler.hpp  Service.cpp  Service.hpp  Sound.cpp  Sound.hpp  Spatializer.cpp  Spatializer.hpp  Track.cpp  Track.hpp  Types.cpp  Types.hpp  Voice.cpp  Voice.hpp
Engine/Source/Zyphryon.Base/: Base.cpp  Base.hpp  Bit.cpp  Bit.hpp  Compiler.cpp  Compiler.hpp  Concept.cpp  Concept.hpp  Hash.cpp  Hash.hpp  Primitive.cpp  Primitive.hpp  Scalar.cpp  Scalar.hpp  Utility.hpp
Engine/Source/Zyphryon.Content/: Cache.hpp  Loader.hpp  Mount.cpp  Mount.hpp  Proxy.hpp  Resource.cpp  Resource.hpp  Scope.hpp  Service.cpp  Service.hpp  Uri.hpp
Engine/Source/Zyphryon.Engine/: Config.cpp  Config.hpp  Dependency.hpp  Kernel.cpp  Kernel.hpp  Locator.cpp  Locator.hpp  Module.cpp  Module.hpp  Subsystem.cpp  Subsystem.hpp  System.hpp
Engine/Source/Zyphryon.Graphic/: Camera.cpp  Camera.hpp  Driver.hpp  Format.cpp  Format.hpp  Image.cpp  Image.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Metadata.hpp  Model.cpp  Model.hpp  Schema.cpp  Schema.hpp  Service.cpp  Service.hpp  Shader.cpp  Shader.hpp  Slice.cpp  Slice.hpp  Technique.cpp  Technique.hpp  Transient.cpp  Transient.hpp  Types.hpp
Engine/Source/Zyphryon.Input/: Common.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Service.cpp  Service.hpp
Engine/Source/Zyphryon.Job/: Service.cpp  Service.hpp
Engine/Source/Zyphryon.Math/: Angle.cpp  Angle.hpp  Color.cpp  Color.hpp  Easing.cpp  Easing.hpp  Matrix3x2.hpp  Matrix4x4.cpp  Matrix4x4.hpp  Pivot2D.cpp  Pivot2D.hpp  Pivot3D.cpp  Pivot3D.hpp  Quaternion.cpp  Quaternion.hpp  Random.hpp  Transform2D.cpp  Transform2D.hpp  Transform3D.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.hpp  Vector4_SSE4.inl  Vector4_WASM.inl
Engine/Source/Zyphryon.Physics/: Intersect.cpp  Intersect.hpp  Manifold.cpp  Manifold.hpp
Engine/Source/Zyphryon.Platform/: Dispatcher.cpp  Dispatcher.hpp  Display.cpp  Display.hpp  Monitor.cpp  Monitor.hpp  Service.cpp  Service.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp
Engine/Source/Zyphryon.Render/: Collector.cpp  Collector.hpp  Encoder.cpp  Encoder.hpp  Pass.cpp  Pass.hpp  Renderer.cpp  Renderer.hpp  Target.cpp  Target.hpp
Engine/Source/Zyphryon.Scene/: Archetype.cpp  Archetype.hpp  Builder.hpp  Clock.cpp  Clock.hpp  Codec.cpp  Codec.hpp  Common.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Factory.cpp  Factory.hpp  Pipeline.hpp  Query.cpp  Query.hpp  Service.cpp  Service.hpp  System.cpp  System.hpp  Tag.cpp  Tag.hpp  Timer.hpp  World.hpp
Example/: CMakeLists.txt
Example/Source/: Application.cpp  Application.hpp  Main.cpp
Tutorial/: CMakeLists.txt
Tutorial/Source/: Tutorial.cpp  Tutorial.hpp
(+420 files in other folders)
